applications/olma/manifests/docs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olma-docs
  namespace: olma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: olma-docs
  template:
    metadata:
      labels:
        app: olma-docs
    spec:
      containers:
        - name: nginx
          image: zot.lumie-infra.com/applications/olma-docs:initial
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
