applications/olma/manifests/docs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olma-docs
  namespace: olma
spec:
  type: ClusterIP
  selector:
    app: olma-docs
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
