applications/olma/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olma-frontend-ingress
  namespace: olma
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: webhook.lumie-infra.com
      http:
        paths:
          - path: /olma
            pathType: Prefix
            backend:
              service:
                name: olma-frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olma-backend-ingress
  namespace: olma
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: webhook.lumie-infra.com
      http:
        paths:
          - path: /olma/api
            pathType: Prefix
            backend:
              service:
                name: olma-backend
                port:
                  number: 8080
